2002-10-16  David Hyatt  <hyatt@apple.com>

	When render objects were being dynamically wrapped in anonymous
	blocks, the layer parenting connection was being broken without
	being reconnected when the wrapping finished.  This patch
	shifts the layer connection into the functions that are also
	called in the dynamic case.

	With this fix, all objects on mrskin finally show up.  Yeehah.
	brainjar.com's brain is back too.

	This patch also stops treating images as inline if they are
	using abs/fixed positioning, since according to the CSS spec,
	abs/fixed positioned elements should be treated as block-level
	content.
	
        * khtml/rendering/render_container.cpp:
        (RenderContainer::addChild):
        (RenderContainer::appendChildNode):
        (RenderContainer::insertChildNode):
        * khtml/rendering/render_image.cpp:
        (RenderImage::setStyle):

2002-10-16  Darin Adler  <darin@apple.com>

	- fixed 3045570 -- can't select a printer at inkfinder.com

        * khtml/khtml_part.cpp: (KHTMLPart::processObjectRequest):
	Call the new openURL for the case where we are reusing a part.
	We do this backwards from how KHTML does, so it's twisted.

        * kwq/KWQKHTMLPartImpl.h: Add openURL.
        * kwq/KWQKHTMLPartImpl.mm: (KWQKHTMLPartImpl::openURL):
	Tell the bridge to load the URL.

        * kwq/mac-encodings.txt: Tweak Korean encoding names.

2002-10-16  David Hyatt  <hyatt@apple.com>

	A very substantial change.  Absolute/fixed positioned elements that
	are NOT renderflows were not getting layers constructed for them.
	They do now.

	Also, floats now have layers constructed for them.  This allows
	printSpecialObjects to be completely eliminated, enables smarter
	damge rect intersection testing for faster painting, and fixes
	regressions on sites like www.demian5.com.
	
        * khtml/rendering/render_box.cpp:
        (RenderBox::setStyle):
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::printObject):