@@ -68,7 +68,7 @@ RenderFormElement::~RenderFormElement()
 
 short RenderFormElement::baselinePosition( bool f ) const
 {
-#ifdef APPLE_CHANGES
+#if APPLE_CHANGES
     return marginTop() + widget()->baselinePosition();
 #else
     return RenderWidget::baselinePosition( f ) - 2 - style()->fontMetrics().descent();
@@ -223,7 +223,7 @@ void RenderCheckBox::calcMinMaxWidth()
 {
     KHTMLAssert( !minMaxKnown() );
 
-#ifdef APPLE_CHANGES
+#if APPLE_CHANGES
     // Let the widget tell us how big it wants to be.
     QSize s(widget()->sizeHint());
 #else
@@ -282,7 +282,7 @@ void RenderRadioButton::calcMinMaxWidth()
 {
     KHTMLAssert( !minMaxKnown() );
 
-#ifdef APPLE_CHANGES
+#if APPLE_CHANGES
     // Let the widget tell us how big it wants to be.
     QSize s(widget()->sizeHint());
 #else
@@ -313,6 +313,9 @@ QString RenderSubmitButton::rawText()
 {
     QString value = element()->value().isEmpty() ? defaultLabel() : element()->value().string();
     value = value.stripWhiteSpace();
+#if APPLE_CHANGES
+    return value;
+#else
     QString raw;
     for(unsigned int i = 0; i < value.length(); i++) {
         raw += value[i];
@@ -320,13 +323,14 @@ QString RenderSubmitButton::rawText()
             raw += '&';
     }
     return raw;
+#endif
 }
 
 void RenderSubmitButton::calcMinMaxWidth()
 {
     KHTMLAssert( !minMaxKnown() );
 
-#ifdef APPLE_CHANGES
+#if APPLE_CHANGES
     // Let the widget tell us how big it wants to be.
     QSize s(widget()->sizeHint());
     setIntrinsicWidth(s.width());
@@ -487,7 +491,7 @@ void RenderLineEdit::calcMinMaxWidth()
 {
     KHTMLAssert( !minMaxKnown() );
 
-#ifdef APPLE_CHANGES
+#if APPLE_CHANGES
     // Let the widget tell us how big it wants to be.
     int size = element()->size();
     QSize s(widget()->sizeForCharacterWidth(size > 0 ? size : 17));
@@ -792,7 +796,7 @@ void RenderSelect::updateFromElement()
         else
             static_cast<KComboBox*>(m_widget)->clear();
 
-#ifdef APPLE_CHANGES
+#if APPLE_CHANGES
         if (m_useListBox)
             static_cast<KListBox*>(m_widget)->beginBatchInsert();
 #endif
@@ -830,7 +834,7 @@ void RenderSelect::updateFromElement()
                 KHTMLAssert(false);
             m_selectionChanged = true;
         }
-#ifdef APPLE_CHANGES
+#if APPLE_CHANGES
         if (m_useListBox)
 	    static_cast<KListBox*>(m_widget)->endBatchInsert();
 #endif
@@ -850,7 +854,7 @@ void RenderSelect::updateFromElement()
     RenderFormElement::updateFromElement();
 }
 
-#ifdef APPLE_CHANGES
+#if APPLE_CHANGES
 // Override to deal with our widget.
 short RenderSelect::baselinePosition( bool f ) const
 {
@@ -911,7 +915,7 @@ void RenderSelect::layout( )
         if(size < 1)
             size = QMIN(static_cast<KListBox*>(m_widget)->count(), 10);
 
-#ifdef APPLE_CHANGES
+#if APPLE_CHANGES
         width += w->scrollBarWidth();
         height = size*height;
         // NSBrowser has problems drawing scrollbar correctly when its size is too small.
@@ -1148,7 +1152,7 @@ void RenderTextArea::calcMinMaxWidth()
     TextAreaWidget* w = static_cast<TextAreaWidget*>(m_widget);
     const QFontMetrics &m = style()->fontMetrics();
     w->setTabStopWidth(8 * m.width(" "));
-#ifdef APPLE_CHANGES
+#if APPLE_CHANGES
     QSize size( QMAX(element()->cols(), 1)*m.width('x') + w->frameWidth() +
                 w->verticalScrollBarWidth(),
                 QMAX(element()->rows(), 1)*m.height() + w->frameWidth()*2 +
